# corelib-py

./: .gitignore  CONFORMANCE_GAP_ANALYSIS.md  MANIFEST.in  PERFORMANCE.md  README.md  pyproject.toml  setup.py
.devcontainer/: .env.example  Dockerfile  attach.sh  build.sh  devcontainer.json  start.sh
.github/: renovate.json
.github/workflows/: callgrind-gate.yml  ci.yml  docs.yml
bench/: compare_protobuf.py  perfbench.py  run_callgrind.sh
docs/: conf.py  index.rst
src/sofab/: __init__.py  _core.py  _speedups.pyx  _varint.py  decoder.py  encoder.py  types.py  visitor.py
tests/: test_conformance_vectors.py  test_float_nan_bits.py  test_malformed.py  test_native_parity.py  test_pure_engine_coverage.py  test_roundtrip.py  test_streaming.py  test_strict_utf8.py  test_varint.py  test_vectors_istream.py  test_vectors_ostream.py  test_visitor.py  vectors.py
