[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sofa-buffers-corelib"
version = "0.8.0"
description = "SofaBuffers binary wire-format runtime — pure Python with an optional native (Cython) accelerator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SofaBuffers" }]
keywords = ["sofabuffers", "serialization", "streaming", "wire-format"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sofa-buffers/corelib-py"

[tool.setuptools]
# The optional C extension is declared in setup.py; keep package data (the
# .pyx source and py.typed marker) in the wheel/sdist.
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sofab = ["py.typed", "_speedups.pyx"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test data tables (byte vectors, parametrize rows) are intentionally wide,
# and compact "advance; assert" lines keep the vector walks readable.
"tests/*" = ["E501", "E702"]

[tool.mypy]
strict = true
files = ["src/sofab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
